#1099 - Redactor popups have z-index issues when triggered in a modal

--- a/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/blc-admin.css
+++ b/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/blc-admin.css
@@ -1565,6 +1565,10 @@ body .redactor_redactor {
     max-width: 934px;
 }
 
+body #redactor_modal_overlay, body #redactor_modal, body .redactor_dropdown {
+	z-index: 3000 !important;
+}
+
 .category-tree {
 	display: none;
 }
